# python-best-practices-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/actions/install-env/: action.yml
{{cookiecutter.repo_name}}/.github/workflows/: code-quality.yml  test.yml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: main.py
